# bd

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
doc/: overview.md
src/: lib.rs
src/blocks/: block_array.rs  block_attributes.rs  block_data.rs  block_generic.rs  block_simple.rs  container.rs  data_slice_generic.rs  data_source_file.rs  mod.rs  template_attributes.rs  template_generic.rs
src/core/: array_size.rs  block.rs  block_address.rs  block_data.rs  data_slice.rs  data_source.rs  item_size.rs  mod.rs  partial_result.rs  template.rs  template_size.rs
src/types/: array_size.rs  block_address.rs  block_array.rs  block_generic.rs  block_simple.rs  data_slice_generic.rs  data_source_file.rs  item_link.rs  item_size.rs  mod.rs  partial_result.rs  template_attributes.rs  template_generic.rs  template_size.rs
